--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "@suger-tdy/typescript-starter",
+  "name": "@suger-tdy/vitest-bug-reporter",
   "version": "0.0.0",
   "packageManager": "pnpm@7.5.0",
-  "description": "starter project for typescript",
+  "description": "vitest-bug-reporter",
   "keywords": [
-    "typescript-starter",
-    "ts-starter"
+    "vitest-bug-reporter"
   ],
   "license": "MIT",
   "author": "tangdaoyuan <1197633750@qq.com> (https://github.com/tangdaoyuan/)",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tangdaoyuan/typescript-starter.git"
+    "url": "git+https://github.com/tangdaoyuan/vitest-bug-reporter.git"
   },
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
@@ -42,9 +41,9 @@
     "release": "bumpp --tag --commit --push && pnpm publish"
   },
   "bugs": {
-    "url": "https://github.com/tangdaoyuan/typescript-starter/issues"
+    "url": "https://github.com/tangdaoyuan/vitest-bug-reporter/issues"
   },
-  "homepage": "https://github.com/tangdaoyuan/typescript-starter#readme",
+  "homepage": "https://github.com/tangdaoyuan/vitest-bug-reporter#readme",
   "dependencies": {
     "picocolors": "^1.0.0"
   },
