--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "*.d.ts"
   ],
   "scripts": {
+    "install": "prebuild-install -r napi || node-gyp rebuild",
     "test": "vitest",
     "test:run": "vitest run",
     "typecheck": "tsc --noEmit",
